Should be the most recent build

--- a/GPE205 Tank Project/Assembly-CSharp.csproj
+++ b/GPE205 Tank Project/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\AI Scripts\AI Controller.cs" />
+    <Compile Include="Assets\Scripts\AI Scripts\Coward.cs" />
     <Compile Include="Assets\Scripts\AI Scripts\Ghost.cs" />
     <Compile Include="Assets\Scripts\AI Scripts\Partol.cs" />
     <Compile Include="Assets\Scripts\AI Scripts\Sight.cs" />
