--- a/GPE205 Tank Project/Assembly-CSharp.csproj
+++ b/GPE205 Tank Project/Assembly-CSharp.csproj
@@ -69,11 +69,13 @@
     <Compile Include="Assets\Scripts\AI Scripts\Pursue.cs" />
     <Compile Include="Assets\Scripts\AI Scripts\Sight.cs" />
     <Compile Include="Assets\Scripts\AI Scripts\Turret.cs" />
+    <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\Despawn.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Inputs.cs" />
     <Compile Include="Assets\Scripts\Projectiles.cs" />
     <Compile Include="Assets\Scripts\ProjectileSpawner.cs" />
+    <Compile Include="Assets\Scripts\Shooter.cs" />
     <Compile Include="Assets\Scripts\TankData.cs" />
     <Compile Include="Assets\Scripts\TankManager.cs" />
     <Reference Include="Unity.Timeline.Editor">
