--- a/GPE205 WORKING/Assembly-CSharp.csproj
+++ b/GPE205 WORKING/Assembly-CSharp.csproj
@@ -77,10 +77,12 @@
     <Compile Include="Assets\Scripts\Menus\GameOver.cs" />
     <Compile Include="Assets\Scripts\Menus\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Menus\SettingsMenu.cs" />
+    <Compile Include="Assets\Scripts\menuToggle.cs" />
     <Compile Include="Assets\Scripts\PowerUps\Powerup.cs" />
     <Compile Include="Assets\Scripts\PowerUps\PowerupController.cs" />
     <Compile Include="Assets\Scripts\PowerUps\SpeedBoost.cs" />
     <Compile Include="Assets\Scripts\PowerUps\SpeedPowerup.cs" />
+    <Compile Include="Assets\Scripts\PowerUps\speedSound.cs" />
     <Compile Include="Assets\Scripts\RandomMap.cs" />
     <Compile Include="Assets\Scripts\RandomTests.cs" />
     <Compile Include="Assets\Scripts\Room.cs" />
@@ -113,25 +115,25 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Sprite.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.4f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -317,13 +319,13 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.4f1/Editor/Data/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>C:/Users/edean/Desktop/GPE205 WORKING/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>C:/Users/edean/Desktop/GPENowWithSound/GPE205 WORKING/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.4f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
